--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -11,6 +11,13 @@ services:
       - ${DB_PORT}:${DB_PORT}
     volumes:
       - postgres:/data/postgres
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - ${REDIS_PORT}:${REDIS_PORT}
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
 
 volumes:
   postgres:
