added login, logout, authentication

--- a/deployments/.env.example
+++ b/deployments/.env.example
@@ -1,7 +1,14 @@
+# Postgres
 DB_PORT=
 POSTGRES_PASSWORD=
 POSTGRES_USER=
 POSTGRES_DB=
 
+# Pg admin
+PGADMIN_EMAIL=
+PGADMIN_PASSWORD=
+PGADMIN_PORT=
+
+# Redis
 REDIS_PASSWORD=
 REDIS_PORT=
