--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -11,6 +11,16 @@ services:
       - ${DB_PORT}:${DB_PORT}
     volumes:
       - postgres:/data/postgres
+  pgadmin:
+    image: dpage/pgadmin4
+    volumes:
+      - pgadmin:/root/.pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+    ports:
+      - '${PGADMIN_PORT}:80'
+    restart: always
   redis:
     image: redis
     restart: always
@@ -21,3 +31,4 @@ services:
 
 volumes:
   postgres:
+  pgadmin:
